<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view1_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_view1_txt_top"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="24sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/main_view1_txt_bot"
                android:layout_below="@+id/main_view1_txt_top"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_view1_real_name"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/main_view1_real_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_view1_gender"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/main_view1_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_view1_birth"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/main_view1_birth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_view1_keyword"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/main_view1_keyword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="36dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/main_view1_more"
                            android:textColor="@color/colorAccent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/main_view1_more"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/main_view1_img"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:text="@string/main_view1_img"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <TextView
                android:id="@+id/main_view1_txt_bot"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_alignParentBottom="true"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="24sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
